@@ -6,6 +6,8 @@ Upcoming:
 - Made borders below buildings and streets only go as deep as needed. This means that you will no longer have ugly borders going down into caves from buildings on top of it
 - The test if a chunk is an ocean chunk was totally wrong. This caused some generation to be ugly. Cleaned up biome test code
 - Small optimizations
+- Added a new 'grass' block to the 'parkblocks' in the city style so that you can use the full palette system for grass in parks
+- Added a new 'generalblocks' section to city style so you can specify a few more blocks ('ironbars', 'glowstone', ...)
 
 1.18-5.2.3:
 - It's now possible to use random block palettes for streets too
